<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_introduction"
            android:icon="@drawable/ic_baseline_intro_24"
            android:title="@string/menu_introduction" />
        <item
            android:id="@+id/nav_read"
            android:icon="@drawable/ic_baseline_read_24"
            android:title="@string/menu_read" />
        <item
            android:id="@+id/nav_benefits"
            android:icon="@drawable/ic_baseline_benefits_24"
            android:title="@string/menu_benefits" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>
</menu>