<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_introduction">

    <fragment
        android:id="@+id/nav_introduction"
        android:name="pk.inlab.team.app.dalailalkhayrat.ui.introduction.IntroductionFragment"
        android:label="@string/menu_introduction"
        tools:layout="@layout/fragment_introduction" />

    <fragment
        android:id="@+id/nav_read"
        android:name="pk.inlab.team.app.dalailalkhayrat.ui.read.ReadFragment"
        android:label="@string/menu_read"
        tools:layout="@layout/fragment_read" />

    <fragment
        android:id="@+id/nav_benefits"
        android:name="pk.inlab.team.app.dalailalkhayrat.ui.benefits.BenefitsFragment"
        android:label="@string/menu_benefits"
        tools:layout="@layout/fragment_benefits" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="pk.inlab.team.app.dalailalkhayrat.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>